# eyes-on-the-guys

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-and-run.sh  package.xml  run-eyes-on-the-guys-sim.sh
include/eyes-on-the-guys/: branch_and_bound_solver.hpp  eyes_on_guys_problem.hpp  forward_search_solver.hpp  guys.hpp  monte_carlo_node.hpp  monte_carlo_tree_search.hpp  planner.hpp  rviz_publisher.hpp  rviz_waypoint_only_publisher.hpp
launch/: get_em.launch.py
msg/: Bit.msg
params/: anaconda_autopilot_params.yaml
resource/: eyes-on-guys-rviz-config.rviz
src/: branch_and_bound_solver.cpp  example.py  eyes_on_guys_problem.cpp  forward_search_solver.cpp  guys.cpp  guys_node.cpp  monte_carlo_node.cpp  monte_carlo_tree_search.cpp  planner.cpp  planner_node.cpp  rviz_publisher.cpp  rviz_publisher_node.cpp  rviz_waypoint_only_publisher.cpp
test/: branch_and_bound_solver_test.cpp  eyes_on_guys_problem_test.cpp  forward_search_solver_test.cpp  monte_carlo_node_test.cpp  monte_carlo_tree_search_test.cpp  planner_test.cpp  plot_mcts_results.py  pruning_comparison_test.cpp  timing_and_reward_comparison_test.cpp
